pkgs/artifacts/tests/tui/snapshots/tests__tui__regenerate_dialog_tests__dialog_snapshot_leave_selected.snap
---
source: tests/tui/regenerate_dialog_tests.rs
expression: result.to_string()
---
Dialog State:
  artifact_name: ssh-key
  affected_targets: ["machine-one"]
  leave_selected: true

Rendered:
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌Regenerating artifact: ssh-key────────────────┐                
                │                                              │                
                │  This will overwrite the existing artifact.  │                
                │                                              │                
                │ ┌───────────────────┐ m┌───────────────────┐ │                
                │ │     > Leave <     │  │    Regenerate     │ │                
                │ └───────────────────┘  └───────────────────┘ │                
                │                                              │                
                │                                              │                
                └──────────────────────────────────────────────┘
