pkgs/artifacts/tests/tui/snapshots/tests__tui__regenerate_dialog_tests__dialog_snapshot_shared_artifact.snap
---
source: tests/tui/regenerate_dialog_tests.rs
expression: result.to_string()
---
Dialog State:
  artifact_name: shared-cert
  affected_targets: ["nixos: server-1", "nixos: server-2", "home: alice@laptop"]
  leave_selected: true

Rendered:
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌Regenerating artifact: shared-cert────────────┐                
                │                                              │                
                │  This will overwrite the existing artifact.  │                
                │                                              │                
                │A┌───────────────────┐r-┌───────────────────┐o│                
                │ │     > Leave <     │  │    Regenerate     │ │                
                │ └───────────────────┘  └───────────────────┘ │                
                │                                              │                
                │                                              │                
                └──────────────────────────────────────────────┘
