pkgs/artifacts/tests/tui/snapshots/tests__tui__regenerate_dialog_tests__dialog_snapshot_with_targets.snap
---
source: tests/tui/regenerate_dialog_tests.rs
expression: result.to_string()
---
Dialog State:
  artifact_name: shared-secret
  affected_targets: ["nixos: machine-one", "nixos: machine-two", "nixos: machine-three"]
  leave_selected: true

Rendered:
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌Regenerating artifact: shared-secret──────────┐                
                │                                              │                
                │  This will overwrite the existing artifact.  │                
                │                                              │                
                │A┌───────────────────┐ne┌───────────────────┐t│                
                │ │     > Leave <     │  │    Regenerate     │ │                
                │ └───────────────────┘  └───────────────────┘ │                
                │                                              │                
                │                                              │                
                └──────────────────────────────────────────────┘
